--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <div class="login">
-        <h1>Predict Chance of Graduate School Admission</h1>
-
+        <h1> style="color:rgb(0, 102, 255)">Predict Your Chance of Graduate School Admission</h1>
+        <h3 style="color:rgb(0, 102, 255)">Enter your test scores and availability of critical documents.</h3>
+        
         <!-- Main Input For Receiving Query to our ML -->
         <form action="{{ url_for('predict')}}" method="post">
             <input type="text" name="gre_score" placeholder="GRE Score" required="required" />
